# unigen-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
crates/unigen/: Cargo.toml
crates/unigen/src/: builder.rs  main.rs
crates/unigen/src/builder/: core.rs
crates/unigen/src/builder/core/: neutron.rs  proton.rs  quark.rs
pwsh/: ci.ps1  dev.generate.ps1  generate.ps1  rel.run.ps1  run.ps1  test.ps1
scripts/: 16gb.warmup.sh  32gb.warmup.sh  8gb.warmup.sh  ci.sh  dev.generate.sh  generate.sh  rel.run.sh  run.sh  sweep.sh  test.sh
src/: atom.rs  builder.rs  lib.rs  main.rs
src/builder/: core.rs
src/builder/core/: neutron.rs  proton.rs  quark.rs
